--- a/style.css
+++ b/style.css
@@ -19,6 +19,7 @@ header {
     justify-content: space-between;
     font-size: 24px;
     font-weight: 700;
+    padding-top: 15px;
 }
 
 header span {
